# devs-clan-site-server

./: .gitignore  README.md  app.py  firebase_actions.py  github_actions.py  main.py  pyproject.toml  requirements.txt
templates/: index.html
