[tool.poetry]
name = "repl_python3_devs-clan-site-server"
version = "0.1.0"
description = ""
authors = ["yechielb2000 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^5.0.3"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
